--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
