--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://romantut1988.github.io/store-and-product-list_React/",
+  "proxy": "https://62ac2393bd0e5d29af1b6637.mockapi.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
@@ -19,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
